src/main/k8/overlays/prod/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mgp-timings-http-ingress
  annotations:
    nginx.org/ssl-services: "mgp-timings"
    ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    # Enable client certificate authentication
    nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
    # Specify the verification depth in the client certificates chain
    nginx.ingress.kubernetes.io/auth-tls-verify-depth: "1"
spec:
  ingressClassName: public
  tls:
    - hosts:
        - mgp-timings.teknichrono.fr
      secretName: letsencrypt-certificate
  rules:
    - host: mgp-timings.teknichrono.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mgp-timings
                port:
                  number: 8080
